batch delete work now
