# src/products/product-router.ts
@@ -5,7 +5,7 @@ export default function defineProductsRoutes() {
   const router = Router();
 
   router.post("/", productController.createProduct);
-  router.delete("/", productController.deleteProducts);
+  router.post("/delete-batch", productController.deleteBatchProducts);
   router.put("/:asin/:locale", productController.updateProduct);
   router.get("/:asin/:locale", productController.getProduct);
   router.get("/:sellerName", productController.getAvailableProductBySellerName);
